--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 body{
-    margin: 0;
+    width: 90%;
+    margin: 0 auto;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 nav{
     display: flex;
@@ -19,11 +21,29 @@ nav a{
     color: black;
     transition: transform 300ms ease-out;
 }
+nav a:hover{
+    transform: scale(1.1);
+    text-decoration: underline;
+}
 
-main, .hTitle{
+main{
     margin-top: 1em;
-    margin-left: 2em;
+    margin-left: 10em;
+}
+.hTitle{
+    margin-top: 5em;
+    margin-bottom: 5em;
+    width: 100%;
+    text-align: center;
 }
 footer{
     margin-top: 3em;
+}
+
+.link{
+    color: #00d613;
+    transition: transform 300ms ease-out;
+}
+#acercade, #proyectos{
+    width: 70%;
 }
